--- a/STM32_BME280.ioc
+++ b/STM32_BME280.ioc
@@ -1,80 +1,62 @@
 #MicroXplorer Configuration settings - do not modify
-Dma.I2C1_RX.0.Direction=DMA_PERIPH_TO_MEMORY
-Dma.I2C1_RX.0.EventEnable=DISABLE
-Dma.I2C1_RX.0.Instance=DMA1_Channel1
-Dma.I2C1_RX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.I2C1_RX.0.MemInc=DMA_MINC_ENABLE
-Dma.I2C1_RX.0.Mode=DMA_NORMAL
-Dma.I2C1_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.I2C1_RX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C1_RX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.I2C1_RX.0.Priority=DMA_PRIORITY_HIGH
-Dma.I2C1_RX.0.RequestNumber=1
-Dma.I2C1_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.I2C1_RX.0.SignalID=NONE
-Dma.I2C1_RX.0.SyncEnable=DISABLE
-Dma.I2C1_RX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.I2C1_RX.0.SyncRequestNumber=1
-Dma.I2C1_RX.0.SyncSignalID=NONE
-Dma.I2C1_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.I2C1_TX.1.EventEnable=DISABLE
-Dma.I2C1_TX.1.Instance=DMA1_Channel2
-Dma.I2C1_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.I2C1_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.I2C1_TX.1.Mode=DMA_NORMAL
-Dma.I2C1_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.I2C1_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.I2C1_TX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.I2C1_TX.1.Priority=DMA_PRIORITY_LOW
-Dma.I2C1_TX.1.RequestNumber=1
-Dma.I2C1_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.I2C1_TX.1.SignalID=NONE
-Dma.I2C1_TX.1.SyncEnable=DISABLE
-Dma.I2C1_TX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.I2C1_TX.1.SyncRequestNumber=1
-Dma.I2C1_TX.1.SyncSignalID=NONE
-Dma.Request0=I2C1_RX
-Dma.Request1=I2C1_TX
-Dma.Request2=USART1_RX
-Dma.Request3=USART1_TX
-Dma.RequestsNb=4
-Dma.USART1_RX.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART1_RX.2.EventEnable=DISABLE
-Dma.USART1_RX.2.Instance=DMA1_Channel3
-Dma.USART1_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_RX.2.MemInc=DMA_MINC_ENABLE
-Dma.USART1_RX.2.Mode=DMA_NORMAL
-Dma.USART1_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_RX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_RX.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.USART1_RX.2.Priority=DMA_PRIORITY_HIGH
-Dma.USART1_RX.2.RequestNumber=1
-Dma.USART1_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.USART1_RX.2.SignalID=NONE
-Dma.USART1_RX.2.SyncEnable=DISABLE
-Dma.USART1_RX.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.USART1_RX.2.SyncRequestNumber=1
-Dma.USART1_RX.2.SyncSignalID=NONE
-Dma.USART1_TX.3.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART1_TX.3.EventEnable=DISABLE
-Dma.USART1_TX.3.Instance=DMA1_Channel4
-Dma.USART1_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_TX.3.MemInc=DMA_MINC_ENABLE
-Dma.USART1_TX.3.Mode=DMA_NORMAL
-Dma.USART1_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_TX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_TX.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
-Dma.USART1_TX.3.Priority=DMA_PRIORITY_LOW
-Dma.USART1_TX.3.RequestNumber=1
-Dma.USART1_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
-Dma.USART1_TX.3.SignalID=NONE
-Dma.USART1_TX.3.SyncEnable=DISABLE
-Dma.USART1_TX.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
-Dma.USART1_TX.3.SyncRequestNumber=1
-Dma.USART1_TX.3.SyncSignalID=NONE
+Dma.I2C1_RX.1.Direction=DMA_PERIPH_TO_MEMORY
+Dma.I2C1_RX.1.EventEnable=DISABLE
+Dma.I2C1_RX.1.Instance=DMA1_Channel2
+Dma.I2C1_RX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C1_RX.1.MemInc=DMA_MINC_ENABLE
+Dma.I2C1_RX.1.Mode=DMA_NORMAL
+Dma.I2C1_RX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C1_RX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C1_RX.1.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.I2C1_RX.1.Priority=DMA_PRIORITY_HIGH
+Dma.I2C1_RX.1.RequestNumber=1
+Dma.I2C1_RX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.I2C1_RX.1.SignalID=NONE
+Dma.I2C1_RX.1.SyncEnable=DISABLE
+Dma.I2C1_RX.1.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.I2C1_RX.1.SyncRequestNumber=1
+Dma.I2C1_RX.1.SyncSignalID=NONE
+Dma.I2C1_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.I2C1_TX.2.EventEnable=DISABLE
+Dma.I2C1_TX.2.Instance=DMA1_Channel3
+Dma.I2C1_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.I2C1_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.I2C1_TX.2.Mode=DMA_NORMAL
+Dma.I2C1_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.I2C1_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.I2C1_TX.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.I2C1_TX.2.Priority=DMA_PRIORITY_LOW
+Dma.I2C1_TX.2.RequestNumber=1
+Dma.I2C1_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.I2C1_TX.2.SignalID=NONE
+Dma.I2C1_TX.2.SyncEnable=DISABLE
+Dma.I2C1_TX.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.I2C1_TX.2.SyncRequestNumber=1
+Dma.I2C1_TX.2.SyncSignalID=NONE
+Dma.Request0=USART1_TX
+Dma.Request1=I2C1_RX
+Dma.Request2=I2C1_TX
+Dma.RequestsNb=3
+Dma.USART1_TX.0.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART1_TX.0.EventEnable=DISABLE
+Dma.USART1_TX.0.Instance=DMA1_Channel1
+Dma.USART1_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_TX.0.MemInc=DMA_MINC_ENABLE
+Dma.USART1_TX.0.Mode=DMA_NORMAL
+Dma.USART1_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_TX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_TX.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART1_TX.0.Priority=DMA_PRIORITY_LOW
+Dma.USART1_TX.0.RequestNumber=1
+Dma.USART1_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART1_TX.0.SignalID=NONE
+Dma.USART1_TX.0.SyncEnable=DISABLE
+Dma.USART1_TX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART1_TX.0.SyncRequestNumber=1
+Dma.USART1_TX.0.SyncSignalID=NONE
 File.Version=6
 I2C1.IPParameters=Timing
-I2C1.Timing=0x2000090E
+I2C1.Timing=0x00707CBB
 KeepUserPlacement=false
 Mcu.Family=STM32WB
 Mcu.IP0=DMA
@@ -117,9 +99,7 @@ NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.DMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.FPU_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.I2C1_ER_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.I2C1_EV_IRQn=true\:0\:0\:false\:false\:true\:true\:true
@@ -144,12 +124,10 @@ PA12.Signal=USB_DP
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=JTMS
 PA13.Locked=true
-PA13.Mode=Trace_Asynchronous_SW
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.GPIOParameters=GPIO_Label
 PA14.GPIO_Label=JTCK
 PA14.Locked=true
-PA14.Mode=Trace_Asynchronous_SW
 PA14.Signal=SYS_JTCK-SWCLK
 PB0.GPIOParameters=GPIO_Label
 PB0.GPIO_Label=LD2 [Green Led]
@@ -162,7 +140,6 @@ PB1.Signal=GPIO_Output
 PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=JTDO
 PB3.Locked=true
-PB3.Mode=Trace_Asynchronous_SW
 PB3.Signal=SYS_JTDO-SWO
 PB5.GPIOParameters=GPIO_Label
 PB5.GPIO_Label=LD1 [Blue Led]
@@ -183,13 +160,10 @@ PB8.Signal=I2C1_SCL
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
 PC13.Locked=true
-PC13.Mode=SYS_WakeUp1
 PC13.Signal=SYS_WKUP2
 PC14-OSC32_IN.Locked=true
-PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
-PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
 PC4.GPIOParameters=GPIO_Label
 PC4.GPIO_Label=B1 [Push Button]
@@ -243,56 +217,57 @@ ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
 ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_USART1_UART_Init-USART1-false-HAL-true
-RCC.ADCFreq_Value=48000000
-RCC.AHBFreq_Value=8000000
-RCC.APB1Freq_Value=8000000
-RCC.APB1TimFreq_Value=8000000
-RCC.APB2Freq_Value=8000000
-RCC.APB2TimFreq_Value=8000000
-RCC.APB3Freq_Value=4000000
-RCC.Cortex2Freq_Value=8000000
-RCC.CortexFreq_Value=8000000
-RCC.FCLK2Freq_Value=8000000
-RCC.FCLKCortexFreq_Value=8000000
+RCC.ADCFreq_Value=128000000
+RCC.AHBFreq_Value=32000000
+RCC.APB1Freq_Value=32000000
+RCC.APB1TimFreq_Value=32000000
+RCC.APB2Freq_Value=32000000
+RCC.APB2TimFreq_Value=32000000
+RCC.APB3Freq_Value=16000000
+RCC.Cortex2Freq_Value=32000000
+RCC.CortexFreq_Value=32000000
+RCC.FCLK2Freq_Value=32000000
+RCC.FCLKCortexFreq_Value=32000000
 RCC.FamilyName=M
-RCC.HCLK2Freq_Value=8000000
-RCC.HCLK3Freq_Value=8000000
-RCC.HCLKFreq_Value=8000000
-RCC.HCLKRFFreq_Value=4000000
+RCC.HCLK2Freq_Value=32000000
+RCC.HCLK3Freq_Value=32000000
+RCC.HCLKFreq_Value=32000000
+RCC.HCLKRFFreq_Value=16000000
+RCC.HSE_VALUE=32000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=8000000
-RCC.I2C3Freq_Value=8000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,Cortex2Freq_Value,CortexFreq_Value,FCLK2Freq_Value,FCLKCortexFreq_Value,FamilyName,HCLK2Freq_Value,HCLK3Freq_Value,HCLKFreq_Value,HCLKRFFreq_Value,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SMPS1Freq_Value,SMPSCLockSelectionVirtual,SMPSFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,USART1Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value
-RCC.LPTIM1Freq_Value=8000000
-RCC.LPTIM2Freq_Value=8000000
-RCC.LPUART1Freq_Value=8000000
+RCC.I2C1Freq_Value=32000000
+RCC.I2C3Freq_Value=32000000
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,Cortex2Freq_Value,CortexFreq_Value,FCLK2Freq_Value,FCLKCortexFreq_Value,FamilyName,HCLK2Freq_Value,HCLK3Freq_Value,HCLKFreq_Value,HCLKRFFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C3Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MSIClockRange,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SMPS1Freq_Value,SMPSCLockSelectionVirtual,SMPSFreq_Value,SYSCLKFreq_VALUE,USART1Freq_Value,USBFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value
+RCC.LPTIM1Freq_Value=32000000
+RCC.LPTIM2Freq_Value=32000000
+RCC.LPUART1Freq_Value=32000000
 RCC.LSCOPinFreq_Value=32000
+RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO1PinFreq_Value=8000000
-RCC.PLLN=32
-RCC.PLLPoutputFreq_Value=64000000
-RCC.PLLQoutputFreq_Value=64000000
-RCC.PLLRCLKFreq_Value=64000000
-RCC.PLLSAI1N=24
-RCC.PLLSAI1PoutputFreq_Value=48000000
-RCC.PLLSAI1QoutputFreq_Value=48000000
-RCC.PLLSAI1RoutputFreq_Value=48000000
-RCC.PWRFreq_Value=8000000
+RCC.MCO1PinFreq_Value=32000000
+RCC.MSIClockRange=RCC_MSIRANGE_10
+RCC.PLLPoutputFreq_Value=128000000
+RCC.PLLQoutputFreq_Value=128000000
+RCC.PLLRCLKFreq_Value=128000000
+RCC.PLLSAI1PoutputFreq_Value=128000000
+RCC.PLLSAI1QoutputFreq_Value=128000000
+RCC.PLLSAI1RoutputFreq_Value=128000000
+RCC.PWRFreq_Value=32000000
 RCC.RNGFreq_Value=32000
-RCC.SAI1Freq_Value=48000000
+RCC.SAI1Freq_Value=128000000
 RCC.SMPS1Freq_Value=8000000
 RCC.SMPSCLockSelectionVirtual=RCC_SMPSCLKSOURCE_HSI
 RCC.SMPSFreq_Value=4000000
-RCC.SYSCLKFreq_VALUE=8000000
-RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSE
-RCC.USART1Freq_Value=8000000
-RCC.USBFreq_Value=48000000
-RCC.VCOInputFreq_Value=4000000
-RCC.VCOOutputFreq_Value=128000000
-RCC.VCOSAI1OutputFreq_Value=96000000
-USART1.IPParameters=VirtualMode-Asynchronous
+RCC.SYSCLKFreq_VALUE=32000000
+RCC.USART1Freq_Value=32000000
+RCC.USBFreq_Value=128000000
+RCC.VCOInputFreq_Value=32000000
+RCC.VCOOutputFreq_Value=256000000
+RCC.VCOSAI1OutputFreq_Value=256000000
+USART1.IPParameters=VirtualMode-Asynchronous,WordLength
 USART1.VirtualMode-Asynchronous=VM_ASYNC
+USART1.WordLength=WORDLENGTH_8B
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=P-NUCLEO-WB55-Nucleo
